--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "install": "^0.13.0",
+    "mongoose": "^5.9.25",
+    "npm": "^6.14.6",
+    "validator": "^13.1.1"
   }
 }
