--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material/top-app-bar": "^7.0.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.1"
