--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material/top-app-bar": "^7.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "install": "^0.13.0",
+    "material-design-icons": "^3.0.1",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mongoose": "^5.9.25",
     "npm": "^6.14.6",
     "validator": "^13.1.1"
