--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material/top-app-bar": "^7.0.0",
+    "axios": "^0.19.2",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "install": "^0.13.0",
